[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspn"
version = "0.1.0"
description = "pySPN — Service Principal Name discovery & BloodHound exporter (lab-only)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "ldap3>=2.9",
  "click>=8.0",
  "pytest>=7.0"
]
